<resources>
    <string name="app_name" translatable="false">User Registration</string>
    <string name="email_address_is_required">Make sure to enter your email address</string>
    <string name="enter_valid_email_address">Enter a valid email address</string>
    <string name="password_validation">Password must be at least 8 characters, 1 lower case, 1 upper case, 1 special character, and 1 digit</string>
    <string name="password_is_required"> Password is required</string>
    <string name="phone_number_is_required">Make sure to enter your phone number</string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="full_name_is_required">Make sure to enter your full name</string>
    <string name="date_is_required">Date of birth is required</string>
    <string name="national_id_is_required">Make sure to enter your national ID</string>
    <string name="enter_a_valid_national_id">Please enter a valid national ID</string>
    <string name="please_enter_a_valid_jordanian_phone_number">Please enter a valid jordanian number</string>
    <string name="this_field_only_english_letters">This field must contains english letters only</string>
    <string name="full_name">Full Name</string>
    <string name="email_domain">Email@domain.com</string>
    <string name="details">Details</string>
    <string name="national_id">National ID</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="data">Data</string>
    <string name="sort"><u>Sort</u></string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="joined_date">Joined date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="underlined_login"><u>Login</u></string>
    <string name="underlined_register"><u>Register</u></string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="something_went_wrong_try_again">Something went wrong</string>
    <string name="email_exist">Email is already exists</string>
    <string name="check_email_or_password">Check your email and password</string>
    <string name="language"><u>عربي</u></string>

</resources>